Retrieves note list
Retrieves note list from DB and displays it using RecyclerView. Multi-threading.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -19,4 +19,5 @@
     <string name="tab_text_3">Tab 3</string>
     <string name="action_settings">Sign Out</string>
     <string name="section_format">Hello World from section: %1$d</string>
+    <string name="title_activity_list">List</string>
 </resources>
