--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -13,11 +13,8 @@
     <string name="permission_rationale">"Contacts permissions are needed for providing email
         completions."
     </string>
-    <string name="title_activity_notes">Notes</string>
-    <string name="tab_text_1">Tab 1</string>
-    <string name="tab_text_2">Tab 2</string>
-    <string name="tab_text_3">Tab 3</string>
+    <string name="title_activity_notes">Welcome</string>
     <string name="action_settings">Sign Out</string>
-    <string name="section_format">Hello World from section: %1$d</string>
-    <string name="title_activity_list">List</string>
+    <string name="section_format"> </string>
+    <string name="title_activity_retrieve_note">make changes&#8230;</string>
 </resources>
